# eitn30

./: Cargo.toml  README.md  individual_goals.md  individual_goals_updated.md  performance_report.md
.cargo/: config.toml
.github/workflows/: build.yml
parseplot/: iperf3_parseplot.py
results-optimized/client/: client-report-1  client-report-2  client-report-4  client-report-6  client-report-8
results-optimized/client/tcp/: client-report-1-172.0.0.1-5001-10.txt  client-report-2-172.0.0.1-5001-10.txt  client-report-2-172.0.0.1-5002-10.txt  client-report-4-172.0.0.1-5001-10.txt  client-report-4-172.0.0.1-5002-10.txt  client-report-4-172.0.0.1-5003-10.txt  client-report-4-172.0.0.1-5004-10.txt
results-optimized/client/udp/: client-report-udp-1-172.0.0.1-5001-10.txt  client-report-udp-2-172.0.0.1-5001-10.txt  client-report-udp-2-172.0.0.1-5002-10.txt  client-report-udp-4-172.0.0.1-5001-10.txt  client-report-udp-4-172.0.0.1-5002-10.txt  client-report-udp-4-172.0.0.1-5003-10.txt  client-report-udp-4-172.0.0.1-5004-10.txt
results-optimized/server/: server-report-1  server-report-2  server-report-4  server-report-6  server-report-8
src/: main.rs  main_rx.rs  tun_tap_ex.rs
src/parseplot/: README.md
src/virtual_interface/: lib.rs
