[package]
name = "inuti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf24l01 = { version="0.3.0", features=['rpi_accel'], git='https://github.com/blennster/rust-nrf24l01'}
tun-tap = "0.1.3"

[package.metadata.cross.build]
default-target = "armv7-unknown-linux-gnueabihf"